functionality for treating guarded pattern